fix(menu): translate() was causing blurring effect
This is only an issue with Chrome, but using a pure
transition doesn't appear to cause any performance issues
on other browsers.

--- a/src/styles/views/app/_app.css
+++ b/src/styles/views/app/_app.css
@@ -58,11 +58,14 @@
 }
 .app-body__content {
   display        : flex;
+  left           : 0;
   margin         : 0 auto;
   flex           : 1 0;
   flex-direction : column;
   overflow       : visible;
-  transition: transform .6s, opacity .6s;
+  transition     : left 0.6s,
+                   opacity 0.6s,
+                   background 0.6s;
 }
 .app-body__content.--menu-open {
   opacity: 0.2;
